<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="@string/menu_header_navigation">
            <menu>
                <item
                        android:id="@+id/nav_home"
                        android:icon="@drawable/ic_menu_map"
                        android:title="@string/menu_home"/>
                <item
                        android:id="@+id/nav_event_details"
                        android:icon="@drawable/ic_menu_event_list"
                        android:title="@string/menu_event_list"/>
            </menu>
        </item>
    </group>

    <item android:title="@string/menu_header_actions">
        <menu>
            <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_menu_logout"
                    android:title="@string/menu_logout"/>
        </menu>
    </item>

</menu>
